--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,7 +8,7 @@
 $def_link_color: #fff;
 $def_link_hover: rgb(234, 22, 139);
 $def_link_shadow: 0 1px 0 rgba(0,0,0,.75);
-
+$def_other_shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.3);
 
 // Default Content & Paragrah Style:
 $def_content_color: #494949;
