--- a/sass/style.scss
+++ b/sass/style.scss
@@ -44,21 +44,265 @@ body {
      }
     }
 }
-.red_tab{
-    background-color: #F00;
-    left: 0;
-    top: 0;
-    vertical-align: middle;
-    padding: 4px;
-    z-index: 0;
-    width: 125px;
-    font-size: 16px;
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: -0.04em;
-    text-align: center;
-    color:#fff;
+.promo{
+    &-tab{
+        &-red{
+            background-color: #F00;
+            left: 0;
+            top: 0;
+            vertical-align: middle;
+            padding: 4px;
+            z-index: 0;
+            width: 125px;
+            font-size: 16px;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: -0.04em;
+            text-align: center;
+            color:#fff;
+            @extend %left;
+        }
+        &-hilight{
+            background-color: #ff0000;
+            display: block;
+            left: 0;
+            top: 0;
+            text-align: center;
+            padding: 0.2em 1em;
+            text-transform: uppercase;
+            color: #FFFFFF;
+            font-family: "arial";
+            font-size:2em;
+            width:200px;
+            @extend %left;
+            margin-bottom:10px;
+
+        }
+    }
 }
+
+.button{
+    &-destination{
+        margin: 0;
+        @extend %text-center;
+        font-family: "Arial";
+        border-radius: 4px;
+        background-color: #0094FF;
+        border: 0;
+        color: #FFFFFF;
+        cursor: pointer;
+        font-size: 1.6em;
+        @extend %relative;
+        text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+        @extend %block;
+        text-decoration: none;
+        text-transform: uppercase;
+        box-sizing: border-box;
+        @include padding(0,0,6px,6px);
+        font-size: 1.25em;
+        max-width: 232px;
+        @extend %left;
+        &:hover{
+            background-color: #0380db;
+        }
+    }
+}
+
+.tab{
+    &-tour{
+        box-sizing: border-box;
+        width: 100%;
+        background-image: -moz-linear-gradient(15deg, rgba(251, 251, 251, 1) 15%, #fafafa 85%);
+        background-image: -o-linear-gradient(15deg, rgba(251, 251, 251, 1) 15%, #fafafa 85%);
+        background-image: -webkit-linear-gradient(15deg, rgba(251, 251, 251, 1) 15%, #fafafa 85%);
+        background-image: linear-gradient(15deg, rgba(251, 251, 251, 1) 15%, #fafafa 85%);
+        text-shadow: 0 1px 0 #ffffff;
+        height: auto;
+        overflow: auto;
+        max-width:400px;
+        text-align: left;
+        @extend %left;
+        &-detail{
+            line-height: 1;
+            padding: 0.8em 1.2em;
+            text-align: right;
+            display: inline-block;
+            &-currency{
+                font-size: 1.2em;
+                font-weight: bold;
+                &--US{
+                    color: #ff7e00;
+                    font-size: 2em;
+                    font-weight: bold;
+                    
+                    &:before{
+                        font-family:"Arial";
+                        content: "\24";
+                        font-size: 0.9em;
+                        position: relative;
+                        text-shadow: 1px 1px 0px #FFFFFF;
+                    }
+                }
+            }
+        }
+        &-btn{
+            -moz-border-radius: 4px / 3px;
+            -webkit-border-radius: 4px / 3px;
+            border-radius: 4px / 3px;
+            -moz-background-clip: padding;
+            -webkit-background-clip: padding-box;
+            background-clip: padding-box;
+            background-color: #ff8c07;
+            color: #fff;
+            font-weight: bold;
+            text-shadow: 0 1px 1px rgba(0,0,0,.17);
+            border: 1px solid #eda853;
+            float: right;
+            margin: 0.8em;
+            &:hover{
+                background-color: #ffa545;
+            }
+            &--txt{
+                color: #fff;
+                font-size: 1em;
+                text-shadow: 0 1px 1px rgba(0,0,0,.17);
+                padding: 0.45em 1em;
+                position: relative;
+                bottom: 3px;
+                font-weight: 100;
+                &:after{
+                    content: url("../img/arrow_btn.png");
+                    position: relative;
+                    left: 5px;
+                    top: 5px;
+                }
+            }
+        }
+    }
+    &-teaser{
+        width: 50px;
+        height: 40px;
+        left: 10px;
+        top: 0;
+        @extend %relative;
+        background: #FF0000;
+        color: #f8fbe9;
+        font-family: "Arial";
+        font-size: 16px;
+        text-shadow: $def_other_shadow;
+        text-align: center;
+        text-transform: uppercase;
+        line-height: 1.1;
+        padding-top: 5px;
+        box-shadow: $def_other_shadow;
+        @extend %left;
+        margin-bottom: 30px;
+        &:after{
+            top: 100%;
+            left: 50%;
+            border: solid transparent;
+            content: " ";
+            height: 0;
+            width: 0;
+            position: absolute;
+            pointer-events: none;
+            border-color: rgba(255, 0, 0, 0);
+            border-top-color: #ff0000;
+            border-width: 15px 25px;
+            margin-left: -25px;
+        }
+    }
+    &-price{
+        background-color: #F4302D;
+        bottom: 0;
+        box-sizing: border-box;
+        color: #fff;
+        font-size: 18px;
+        font-weight: bold;
+        height: auto;
+        line-height: 1;
+        padding: 1%;
+        position: relative;
+        right: 0;
+        text-align: right;
+        text-shadow: 0 1px 1px rgba(0, 0, 0, 0.39);
+        width: 100%;
+        max-width: 251px;
+        margin-bottom: 10px;
+        @extend %left;
+        &:before{
+            background-image: url("../img/hotels-com.svg");
+            background-repeat:no-repeat;
+            background-size: 100% auto;
+            content: "";
+            display: inline-block;
+            height: 100%;
+            left: 7px;
+            position: absolute;
+            width: 38%;
+        }
+        a{
+            color:#fff;
+            text-decoration: none;
+        }
+        span{
+            font-size: 0.6em;
+            font-weight: normal;
+        }
+    }
+    &-hilight{
+        background-color: rgba(255,255,255,0.8);
+        bottom: 0;
+        height: auto;
+        left: 0;
+        position: relative;
+        width: 70%;
+        max-height: 116px;
+        &-detail{
+            float: left;
+            padding: 1.5em 0 1.5em 1.5em;
+            width: 66.4%;
+            h4{
+                font-family: "Arial";
+                font-weight:500;
+                font-size: 2em;
+                line-height: 1.3;
+                padding-right: 10px;
+                margin-bottom: 0;
+                text-align: left;
+                a{
+                    color: #494949;
+                    text-decoration: none;
+                }
+            }
+            div{
+                float:none;
+            }
+            p{
+                font-size: 1em;
+                margin-top: 5px;
+            }
+        }
+        &-price{
+            padding: 2em 1em 2em 0;
+            width: 20%;
+            display: inline-block;
+            top: 30px;
+            position: relative;
+            &-currency{
+                font-size: 1.5em;
+                &--THB{
+                    color: #f444a9;
+                    font-size: 3em;
+                    font-weight: bold;
+                    padding-left: 5px;
+                }
+            }
+        }
+    }
+}
+
+
 .teaser-big-detail{
     font-family: "Arial";
     @extend %relative;
